<resources>
    <string name="app_name">ReunionHandler</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string name="action_settings">Tools</string>
    <string name="show_coords">Show Coords</string>
    <string name="show_task_list">Show task list</string>
    <string name="color">Color</string>
    <string name="formato">Format</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_notas">Notes</string>

    <string name="latitud">Latitude</string>
    <string name="longitud">Longitude</string>

    <string name="rojo">Red</string>
    <string name="azul">Blue</string>
    <string name="verde">Green</string>
    <string name="negro">Black</string>

    <string name="negrita">Bold</string>
    <string name="cursiva">Italic</string>

    <string name="nombre">Name:</string>
    <string name="lugar">Place:</string>
    <string name="fecha">Date:</string>
    <string name="horainicio">Start time:</string>
    <string name="horafin">End time:</string>
    <string name="aceptar">Accept</string>

    <string name="anadirreunion">Add reunion</string>
    <string name="eliminarreunion">Remove reunion</string>
    <string name="consultarlista">Check list</string>

    <string name="preguntaeliminar">Remove</string>
    <string name="delistareuniones">From the reunion list</string>

    <string name="si">Si</string>
    <string name="no">No</string>

    <string name="coordenadas">Coords</string>

    <string name="a_las">At</string>
    <string name="reunion">Reunion</string>
    <string name="title_activity_map">MapActivity</string>

    <string name="locactual">Actual Location</string>

    <string name="ok">Ok</string>
    <string name="show_map">Show map</string>

    <string name="elegircolorfondo">Background color</string>
    <string name="elegircolorletra">Letter color</string>

    <string name="elegircolorfondodesc">Pick the background color</string>
    <string name="elegircolorletradesc">Pick the letter color</string>

    <string name="colores">Colors</string>

    <string name="imagenes">Images</string>
    <string name="elegirimagen">Select Image</string>
    <string name="elegirimagendesc">Pick an image for the Navigation Drawer</string>
    <string name="title_activity_widget_configure">WidgetConfigureActivity</string>

    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="action_identify">Login</string>
    <string name="show_data">Show data</string>

    <string name="proximareunion">Next reunion:</string>
    <string name="lastdate">Last update date:</string>

    <string name="on">on</string>
    <string name="at">at</string>

    <string name="lastname">Lastname</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="updatedata">Update data</string>

    <string name="read_content">Read content</string>
    <string name="write_content">Write content</string>

    <string name="no_voice_recognised">No voice recognised</string>
    <string name="say_a_word">Say a word!</string>
    <string name="no_voice_recogniser">No voice recogniser</string>
    <string name="reunion_added">Reunion added succesfully</string>

    <string name="correct_login">Succesfully logged</string>
    <string name="incorrect_mail_password">The email or password are incorrect</string>

    <string name="sync">Synchronize</string>
    <string name="syncdesc">Synchronize with your calendar</string>

    <string name="gestion">Reunion management</string>
    <string name="clean">Clean list</string>
    <string name="cleandesc">Clean reunion list</string>

    <string name="removeconfirm">Are you sure you want to delete all the reunions?</string>
    <string name="logout">Logout</string>

    <string name="succesfull_logout">Logged out succesfully</string>
    <string name="not_logged_in">You are not logged in</string>
    <string name="not_registered">You need to be registered to see your data</string>

    <string name="repeated_reunion">This reunion has been already added to the list</string>
</resources>
